--- a/UKTrains.WP7/UKTrains.WP7.csproj
+++ b/UKTrains.WP7/UKTrains.WP7.csproj
@@ -92,6 +92,7 @@
     <Compile Include="LazyBlockUI.cs" />
     <Compile Include="LittleWatson.cs" />
     <Compile Include="LocationService.cs" />
+    <Compile Include="RecentItems.cs" />
     <Compile Include="StationPage.xaml.cs">
       <DependentUpon>StationPage.xaml</DependentUpon>
     </Compile>
