--- a/UKTrains.WP7/packages.config
+++ b/UKTrains.WP7/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Coding4Fun.Toolkit.Controls" version="2.0.7" targetFramework="wp71" />
+  <package id="Microsoft.Bcl" version="1.0.19" targetFramework="wp71" />
+  <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="wp71" />
+  <package id="Microsoft.Bcl.Build" version="1.0.9-beta" targetFramework="wp71" />
   <package id="SharpGIS.GZipWebClient" version="1.4.0.0" targetFramework="wp71" />
   <package id="WindowsPhoneControls" version="0.3.0" targetFramework="wp71" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp71" />
