--- a/Coursera.Portable/Coursera.Portable.fsproj
+++ b/Coursera.Portable/Coursera.Portable.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="..\Coursera.WP7\Crawler.fs">
       <Link>Crawler.fs</Link>
     </Compile>
+    <None Include="topics.json" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
@@ -67,8 +68,7 @@
       <HintPath>$(MSBuildExtensionsPath32)\..\Reference Assemblies\Microsoft\FSharp\3.0\Runtime\.NETPortable\FSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Data">
-      <HintPath>..\packages\FSharp.Data.1.1.9\lib\portable-net40+sl5+wp8+win8\FSharp.Data.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\lib\wp8\FSharp.Data.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack-PCL">
       <HintPath>..\packages\HtmlAgilityPack-PCL.1.4.6\lib\HtmlAgilityPack-PCL.dll</HintPath>
