Give better message when lectures not available

--- a/Coursera.Portable/Coursera.Portable.fsproj
+++ b/Coursera.Portable/Coursera.Portable.fsproj
@@ -60,6 +60,7 @@
       <Link>Crawler.fs</Link>
     </Compile>
     <None Include="topics.json" />
+    <None Include="Tests.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
