--- a/LearnOnTheGo.WP7/LearnOnTheGo.WP7.csproj
+++ b/LearnOnTheGo.WP7/LearnOnTheGo.WP7.csproj
@@ -134,7 +134,7 @@
     <Content Include="Icons\dark\appbar.control.play.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Icons\dark\appbar.page.pdf.png">
+    <Content Include="Icons\dark\appbar.page.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Icons\dark\appbar.reply.email.png">
