--- a/LearnOnTheGo.WP8/LearnOnTheGo.WP8.csproj
+++ b/LearnOnTheGo.WP8/LearnOnTheGo.WP8.csproj
@@ -143,7 +143,7 @@
     <Content Include="..\LearnOnTheGo.WP7\Icons\dark\appbar.control.play.png">
       <Link>Icons\dark\appbar.control.play.png</Link>
     </Content>
-    <Content Include="..\LearnOnTheGo.WP7\Icons\dark\appbar.page.pdf.png">
+    <Content Include="..\LearnOnTheGo.WP7\Icons\dark\appbar.page.png">
       <Link>Icons\dark\appbar.page.pdf.png</Link>
     </Content>
     <Content Include="..\LearnOnTheGo.WP7\Icons\dark\appbar.refresh.png">
