Sample Data + Design Changes + Go to first uncompleted lecture section when opening a course + Distinguish viewed lectures from non-viewed lectures

--- a/Coursera/Coursera.fsproj
+++ b/Coursera/Coursera.fsproj
@@ -57,9 +57,11 @@
     <Compile Include="LazyAsync.fs" />
     <Compile Include="LazyBlock.fs" />
     <Compile Include="DataModel.fs" />
+    <EmbeddedResource Include="topics.json" />
+    <EmbeddedResource Include="lectures.html" />
     <Compile Include="Parser.fs" />
     <Compile Include="Crawler.fs" />
-    <None Include="topics.json" />
+    <Compile Include="SampleData.fs" />
     <None Include="Tests.fsx" />
   </ItemGroup>
   <ItemGroup>
