--- a/UKTrains.WP8/UKTrains.WP8.csproj
+++ b/UKTrains.WP8/UKTrains.WP8.csproj
@@ -138,6 +138,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\Icons\appbar.email.hardedge.png" />
+    <Content Include="Assets\Icons\appbar.filter.clear.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\Icons\appbar.filter.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
