Allow to download the lecture videos for later + Use check image instead of gray to denote watched videos

--- a/LearnOnTheGo.WP8/LearnOnTheGo.WP8.csproj
+++ b/LearnOnTheGo.WP8/LearnOnTheGo.WP8.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Converters.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="LazyBlockUI.cs" />
+    <Compile Include="LectureExtraInfo.cs" />
     <Compile Include="LittleWatson.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsPage.xaml.cs">
@@ -152,6 +153,7 @@
     <Content Include="Assets\Icons\appbar.control.play.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Icons\appbar.download.png" />
     <Content Include="Assets\Icons\appbar.email.hardedge.png" />
     <Content Include="Assets\Icons\appbar.information.png" />
     <Content Include="Assets\Icons\appbar.message.png" />
