--- a/Trains/Trains.fsproj
+++ b/Trains/Trains.fsproj
@@ -7,11 +7,11 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>5552f566-e77e-433b-8459-a41f865af52c</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>NationalRail.WP8</RootNamespace>
-    <AssemblyName>NationalRail</AssemblyName>
+    <RootNamespace>Trains</RootNamespace>
+    <AssemblyName>Trains</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile47</TargetFrameworkProfile>
-    <Name>NationalRail</Name>
+    <Name>Trains</Name>
     <TargetFSharpCoreVersion>2.3.5.0</TargetFSharpCoreVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
